--- a/fronted/package.json
+++ b/fronted/package.json
@@ -14,6 +14,7 @@
     "chartjs-adapter-date-fns": "^3.0.0",
     "data-fns": "^1.1.0",
     "date-fns": "^3.6.0",
+    "moment-timezone": "^0.5.45",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
